--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,103 +1,53 @@
-# version: "3.9"
-
-# services:
-
-#   postgres:
-#     image: postgres:14.2
-#     environment:
-#       POSTGRES_USER: root
-#       POSTGRES_PASSWORD: root
-#     ports: 
-#       - '5433:5433'
-#     volumes:
-#       - drkiq-postgres:/var/lib/postgresql/data
-
-#   redis:
-#     image: redis:7.0
-#     ports:
-#       - '6379:6379'
-#     volumes:
-#       - drkiq-redis:/var/lib/redis/data
-
-#   drkiq:
-#     build:
-#       context: .
-#     volumes:
-#       - ./drkiq:/opt/app
-#     links:
-#       - postgres
-#       - redis
-#     ports:
-#       - '8010:8010'
-#     env_file:
-#       - .env
-
-#   sidekiq:
-#     build:
-#       context: .
-#     command: bundle exec sidekiq 
-#     links:
-#       - postgres
-#       - redis
-#     env_file:
-#       - .env
-
-# volumes:
-#   drkiq-postgres:
-#   drkiq-redis:
-
-
-version: '3.9'
+version: "3.9"
 
 services:
-  web:
+  blog:
     build:
       context: .
       dockerfile: Dockerfile
-    image: webops-app:latest
+    image: webops_rails:latest 
     command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -b '0.0.0.0'"
     volumes:
-      - ./app:/app
+      - .:/WebOps-/app
     ports:
       - "3000:3000"
     depends_on:
-      - db
-    environment:
-      RAILS_ENV: development
-      DATABASE_URL: postgres://postgres:root@root:5433/webops
+      - postgres
+      - redis
+    env_file:
+      - .env
 
-  db:
-    image: postgres:13
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
+  postgres:
+    image: postgres:latest
     environment:
-      POSTGRES_DB: webops
       POSTGRES_USER: root
       POSTGRES_PASSWORD: root
+      POSTGRES_DB: webops
+    ports: 
+      - '5432:5432'
+    volumes:
+      - webops-postgres:/var/lib/postgresql/data
 
   redis:
-    image: "redis:latest"
+    image: "redis:alpine"
+    command: ["--bind", "0.0.0.0"]
     ports:
-      - "6379:6379"
+      - '6379:6379'
+    volumes:
+      - webops-redis:/data
 
   sidekiq:
     build:
       context: .
-      dockerfile: Dockerfile
-    command: bundle exec sidekiq -C config/initializers/sidekiq.rb
+    command: bundle exec sidekiq 
     volumes:
-      - ./app:/app
-    depends_on:
-      - db
+      - .:/WebOps-/app
+    links:
+      - postgres
       - redis
-
-    environment:
-      RAILS_ENV: development
-      DATABASE_URL: postgres://postgres:root@root:5433/webops
-      REDIS_URL: redis://redis:6379/0
-      SIDEKIQ_CONCURRENCY: 5
-    
-
+    env_file:
+      - .env
 
 volumes:
-  postgres_data:
+  webops-postgres:
+  webops-redis:
